# meta-vote-contracts

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
contract/: Cargo.toml  Makefile
contract/meta-vote-contract/: Cargo.toml
contract/pipeline-contract/: Cargo.toml
contract/res/: meta_vote_contract.wasm
contract/scripts/: integration_test.sh  main_deploy.sh  test_deploy.sh
contract/test-meta-token/: Cargo.toml
contract/test-meta-token/src/: lib.rs
contracts/: Cargo.toml  Makefile
contracts/meta-vote-contract/: Cargo.toml
contracts/meta-vote-contract/src/: constants.rs  deposit.rs  interface.rs  internal.rs  lib.rs  locking_position.rs  migrate.rs  types.rs  voter.rs  withdraw.rs
contracts/meta-vote-contract/src/tests/: mod.rs  utils.rs
contracts/mpip-contract/: Cargo.toml  README.md
contracts/mpip-contract/src/: constants.rs  deposit.rs  interface.rs  internal.rs  lib.rs  mpip.rs  types.rs  utils.rs  vote.rs  vote_counting.rs  voter.rs
contracts/mpip-contract/src/tests/: mod.rs
contracts/res/: meta_vote_contract.wasm  test_meta_token.wasm
contracts/test-meta-token/: Cargo.toml
contracts/test-meta-token/src/: lib.rs
front/: .env.example  README.md  config.ts  next.config.js  package.json
front/constants/: colors.ts  faq.ts  index.tsx  whitelist.ts
front/contexts/: WalletSelectorContext.tsx
front/hooks/: example.ts  getMeta.ts  metapool.ts  near.ts
front/lib/: methods.ts  near.ts  util.ts
front/pages/: Home.tsx  _app.page.tsx  index.page.tsx
front/queries/: example.ts  near.ts
front/stores/: pageBlocker.ts  voter.ts  wallet.ts
front/styles/: globals.css
front/theme/: theme.ts
front/types/: metapool.types.ts  pageblocker.types.ts
front/utils/: dateUtils.ts  errorHandlers.tsx
front/validation/: exampleValidation.ts  lockValidation.ts  votesValidation.ts
kv-store-contract/: Cargo.toml
kv-store-contract/src/: lib.rs
media/: mpip-process.drawio  process.drawio
meta-vote-contract/: Cargo.toml
meta-vote-contract/src/: constants.rs  delegate-evm.rs  deposit.rs  evm_delegate.rs  interface.rs  internal.rs  lib.rs  locking_position.rs  migrate.rs  types.rs  utils.rs  view.rs  voter.rs  withdraw.rs
mpip-contract/src/: internal.rs  lib.rs  types.rs  utils.rs  vote.rs
near-workspaces-integration-test/: Cargo.toml
near-workspaces-integration-test/src/: main.rs
res/: meta_vote_contract.wasm  mpip_contract.wasm  test_meta_token.wasm
scripts/: build.sh  integration-test.sh  integration_test.sh  main_deploy.sh  mpip_main_deploy.sh  run_workspace.sh  test_deploy.sh
scripts/mainnet/: call.sh  deploy_init_kv_store.sh  deploy_init_meta_vote.sh  deploy_mpip.sh  (+12 more)
workspaces/: Cargo.toml
workspaces/src/: main.rs
(+97 files in other folders)
