[package]
name = "workspaces-integration-test"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
near-units = "0.2.0"
near-sdk = "4.0.0"
near-workspaces = "0.10.0"
anyhow = "1.0"
json = "~0.12.4"
chrono="0.4.31"
#maplit = "1.0"
near-gas = { version = "0.2.5", features = ["serde", "borsh", "schemars"] }
serde = "1.0"
serde_with = "3.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
#tracing = "0.1"
#tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
