[package]
name = "test-meta-token"
version = "0.1.0"
edition = "2018"
authors = ["Narwallets.com <hello@narwallets.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
