[package]
name = "test-mpdao-token"
version = "0.1.0"
edition = "2021"
authors = ["metapool.app <hello@metapool.app>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.0.0"
near-contract-standards = "5.0.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
